--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <title>EJ PEE EYE WA:Z</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script type="module" src="/static/JS/dataHandler.js"></script>
+    <script src="/static/JS/list.js" defer></script>
 </head>
 <body>
 {% include "navbar.html" %}
 {% block content %} {% endblock %}
+<h1>STAR WARS universe planets</h1>
+<div id="table_place">
+    <table id="table_to_show">
+
+    </table>
+</div>
 </body>
 </html>
