it's a modal nontherless

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>EJ PEE EYE WA:Z</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/modal.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script type="module" src="/static/JS/dataHandler.js"></script>
     <script src="/static/JS/list.js" defer></script>
 </head>
