back button naming

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" id="nextNavButton">next</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="lastNavButton">next</a>
+                <a class="nav-link" id="lastNavButton">back</a>
             </li>
         </ul>
     </div>
