--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,13 +18,10 @@
             <!--</li>-->
         {% else %}
             <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('list') }}">list</a>
-            </li>
             <ul class="nav navbar-right">
-            {#<li>
-                <a class="nav-link" href="{{ url_for('add', type='user', id='0') }}">Register</a>
-            </li>#}
+            <li>
+                <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+            </li>
             <li>
                 <a class="nav-link" href="{{ url_for('login') }}">LOGIN</a>
             </li>
