--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,18 +1,18 @@
 {% extends "layout.html" %}
 
 {% block content %}
-{% if login == True %}
-<form action="{{url_for('login')}}" method="post" name="add user">
+    {% if login == True %}
+        <form action="{{ url_for('login') }}" method="post" name="add user">
     {% else %}
-    <form action="{{url_for('add', type='user', id='0')}}" method="post" name="add user">
-        {% endif %}
-        <div class="form-group">
-            <label for="user_name">Username</label> <br>
-            <input class="form-control" name="user_name" id="user_name" type="text" required="True"> <br>
-            <label for="password">password</label> <br>
-            <input class="form-control" name="password" id="password" type="password" required="True"> <br>
-            <button type="submit" class="btn" name="add user" required="True">Submit</button>
-        </div>
-    </form>
+        <form action="{{ url_for('register') }}" method="post" name="add user">
+    {% endif %}
+<div class="form-group">
+    <label for="user_name">Username</label> <br>
+    <input class="form-control" name="user_name" id="user_name" type="text" required="True"> <br>
+    <label for="password">password</label> <br>
+    <input class="form-control" name="password" id="password" type="password" required="True"> <br>
+    <button type="submit" class="btn" name="add user" required="True">Submit</button>
+</div>
+</form>
 
-    {% endblock %}
+{% endblock %}
