--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     </table>
 </div>
 {% if 'user_name' in session %}
-    <div id="user_active"></div>
+    <div id="user_active" hidden></div>
 {% endif %}
 </body>
 </html>
